# crates.io

./: Cargo.toml  docker-compose.yml  ember-cli-build.js  frontend.Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
.github/: renovate.json  renovate.json5
.github/workflows/: ci.yml  coverage.yml
app/components/: header.hbs  header.js  header.module.css
app/styles/: application.module.css
crates/cargo-manifest/: Cargo.toml
crates/crates_io_api_types/: Cargo.toml
crates/crates_io_api_types/src/: release_tracks.rs
crates/crates_io_cargo_toml/: Cargo.toml  README.md
crates/crates_io_cargo_toml/tests/: parse.rs
crates/crates_io_cdn_logs/: Cargo.toml
crates/crates_io_cdn_logs/src/: paths.rs
crates/crates_io_database/src/: fns.rs
crates/crates_io_database/tests/: default_versions.rs
crates/crates_io_index/: Cargo.toml
crates/crates_io_index/src/: data.rs  features.rs
crates/crates_io_markdown/: Cargo.toml
crates/crates_io_markdown/src/: lib.rs
crates/crates_io_real_ip/: Cargo.toml
crates/crates_io_real_ip/src/: lib.rs
crates/crates_io_trustpub/: Cargo.toml
crates/crates_io_trustpub/src/: access_token.rs  lib.rs  (+1 more)
crates/crates_io_validation/: Cargo.toml
docs/: VENDORING-CARGO-MANIFEST.md
e2e/: helper.ts
migrations/2026-06-10-120000-0000_default_versions_triggers/: down.sql  up.sql
public/.well-known/: security.txt
src/: controllers.rs  router.rs  sql.rs
src/controllers/: keyword.rs
src/models/: team.rs
src/tests/: all.rs  record.rs  util.rs
src/util/: gh_token_encryption.rs
src/worker/: mod.rs
(+21 files in other folders)
