[package]
name = "cargo-manifest"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "Helper crate to parse and manipulate manifests - `Cargo.toml` files."
edition = "2021"

[lib]
name = "cargo_manifest"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
thiserror = "=2.0.18"
toml = { version = "=1.1.2", default-features = false, features = [
  "parse",
  "serde",
  "preserve_order",
] }

[dev-dependencies]
insta = "=1.47.2"
tempfile = "=3.27.0"
toml = { version = "=1.1.2", default-features = false, features = [
  "display",
  "serde",
] }
